[tool.poetry]
name = "jaxonloader"
version = "0.1.3"
description = "A dataloader, but for JAX"
authors = ["Artur A. Galstyan <galstyan.artu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "jaxonloader" },
]

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.24"
jaxtyping = "^0.2.25"
jaxlib = "^0.4.24"
tqdm = "^4.66.2"
beartype = "^0.17.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
