[project]
name = "jaxonloader"
version = "0.3.0"
description = "A dataloader, but for JAX"
readme = "README.md"
requires-python ="~=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Artur A. Galstyan", email = "mail@arturgalstyan.dev"},
]
dependencies=[
  "tqdm",
  "jaxtyping",
  "progressbar",
  "polars",
  "beartype",
  "typing_extensions",
  "loguru",
  "kaggle",
  "pandas",
  "pyarrow",
]
[project.optional-dependencies]
dev = [
    "nox",
    "pre-commit",
    "pytest",
    "mkdocs",
]



[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
reportMissingImports = false
include = ["jaxonloader", "tests"]
exclude = ["testing_ground"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
